2009-11-23  Juri Linkov  <juri@jurta.org>

	Implement DocView Continuous mode.  (Bug#4896)
	* doc-view.el (doc-view-continuous-mode): New defcustom.
	(doc-view-mode-map): Bind C-n/<down> to `doc-view-next-line-or-next-page',
	C-p/<up> to `doc-view-previous-line-or-previous-page'.
	(doc-view-next-line-or-next-page)
	(doc-view-previous-line-or-previous-page): New commands.

2009-11-23  Juri Linkov  <juri@jurta.org>

	Implement Isearch in comint input history.  (Bug#3746)
	* comint.el (comint-mode): Add `comint-history-isearch-setup' to
	`isearch-mode-hook'.
	(comint-history-isearch): New defcustom.
	(comint-history-isearch-backward)
	(comint-history-isearch-backward-regexp): New commands.
	(comint-history-isearch-message-overlay): New buffer-local variable.
	(comint-history-isearch-setup, comint-history-isearch-end)
	(comint-goto-input, comint-history-isearch-search)
	(comint-history-isearch-message, comint-history-isearch-wrap)
	(comint-history-isearch-push-state)
	(comint-history-isearch-pop-state): New functions.

2009-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-shell-prompt-pattern): Use \r for carriage
	return.
	(tramp-handle-make-symbolic-link)
	(tramp-handle-dired-compress-file, tramp-handle-expand-file-name):
	Quote file names.
	(tramp-send-command-and-check): New argument DONT-SUPPRESS-ERR.
	(tramp-handle-process-file): Use it.

2009-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.el (move-to-window-line-last-op): Remove.
	(move-to-window-line-top-bottom): Reuse recenter-last-op instead.

2009-11-23  Deniz Dogan  <deniz.a.m.dogan@gmail.com>  (tiny change)

	Make M-r mirror the new cycling behavior of C-l.
	* window.el (move-to-window-line-last-op): New var.
	(move-to-window-line-top-bottom): New command.
	(global-map): Bind M-r move-to-window-line-top-bottom.

2009-11-23  Sven Joachim  <svenjoac@gmx.de>

	* dired-x.el (dired-guess-shell-alist-default):
	Support xz format.  (Bug#4953)
